# JASAEL-HowToAnalyseQuantiativeSoundscapeData

./: .gitignore  README.md  _quarto.yml  paper.qmd  paper.quarto_ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup_env.sh
paper/: manuscript.html
