[project]
name = "jasael-howtoanalysequantiativesoundscapedata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib==3.5.3",
    "numpy>=1.21,<2",
    "pandas<2",
    "pyyaml>=6.0.2",
    "soundscapy==0.4.4",
]
